fix <P> overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,7 +81,7 @@ hr {
 }
 
 .banner {
-    position: relative;
+    /* position: relative; */
 }
 
 .banner-container {
@@ -89,6 +89,7 @@ hr {
     justify-content: start;
     align-items: center;
     height: 100vh;
+    position: relative;
 }
 
 .banner-container-fluid {
@@ -111,7 +112,6 @@ hr {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
     transform: scaleX(-1);
 }
 
@@ -137,9 +137,9 @@ hr {
 .banner-description p {
     font-weight: 350;
     font-size: 1.5em;
-    line-height: 0;
     color: #f5f6fa;
     text-shadow: 1px 1px 1px black;
+    margin: 0 10px;
 }
 
 .banner-description button {
@@ -255,7 +255,7 @@ hr {
 
     .banner-description {
         padding-left: 30px;
-        font-size: 0.5em;
+        /* font-size: 0.5em; */
     }
 
     .items-wrapper {
